Escal V3 :  petites corrections CCS (textes justifiés deviennent alignés à gauche) et balise meta author
git-svn-id: svn://zone.spip.org/spip-zone/_squelettes_@108065 ac52e18a-acf5-0310-9fe8-c4428f23b10a

--- a/escal/branche_V3/styles/general.css
+++ b/escal/branche_V3/styles/general.css
@@ -1007,7 +1007,7 @@ a.articles-rubrique:hover {
 	font-size: 1.4rem;
 	margin-right: 5px;
 	margin-left: 10px;
-    text-align: justify;
+    text-align: left;
 }
 #auteur-article {
 	text-align: right;
@@ -1046,7 +1046,7 @@ a.articles-rubrique:hover {
 	font-style: italic;
 }
 #texte-article {
-	text-align: justify;
+	text-align: left;
 	font-size: 1.2rem;
 	margin-right: 5px;
 	margin-left: 5px;
@@ -1085,7 +1085,7 @@ a.articles-rubrique:hover {
 	margin: 0 2em 2em 2em;
 	min-height: 40px;
 	padding: 15px 20px 15px 80px;
-	text-align: justify;
+	text-align: left;
 	vertical-align: middle;
 	width: 70%;
 	box-shadow: 10px 10px 5px #888888;
@@ -1828,7 +1828,7 @@ li.meteo:hover .popup {
 /* personnalisation du plugin Mentions légales */
 /***********************************************/
 #mentions {
-	text-align: justify;
+	text-align: left;
 	font-size: 1.2rem;
 	padding: 5px;
 }
