--- a/escal/branche_V3/styles/prive_perso.css
+++ b/escal/branche_V3/styles/prive_perso.css
@@ -35,3 +35,6 @@ span.droite {
 .formulaire_spip #bugIE7{
 	display: none;
 }
+.box .inner h3 {
+	word-wrap: break-word;
+}
